Migrated to Vite

--- a/timer/index.html
+++ b/timer/index.html
@@ -9,7 +9,7 @@
       content="A web based timer"
     />
     <title>Timer app</title>
-  </head>
+  <script type="module" src="src/index"></script></head>
   <body>
     <div id="root"></div>
   </body>
